--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,7 +18,10 @@
     </header>
 
     {{{body}}}
-    <!-- JavaScript Bundle with Popper -->
+    
+   <footer>
+       <h1>Aquí va el footer</h1>
+   </footer>
 
     <script src="/js/script.js"></script>
 </body>
