--- a/views/card.hbs
+++ b/views/card.hbs
@@ -45,7 +45,7 @@
   <div class="card-body">
     <h5 class="card-title">Lista de usuarios</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="#" class="btn btn-primary button">Go somewhere</a>
   </div>
 </div>
 </div>
