--- a/views/rutas.hbs
+++ b/views/rutas.hbs
@@ -3,6 +3,13 @@
 <div class= "ranking">
   Aqui van las estrellas de la valoración
 </div>
+<div>
+ <select name="select">
+  <option value="value1">Rutas</option>
+  <option value="value2">Comprar y Vender</option>
+  <option value="value3">Recuerdos</option>
+</select>
+</div>
 
   <div class="nickname">
     <input>nickname</input>
